<resources>
    <string name="app_name">CalendearLife</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="enter_title">Enter Title</string>
    <string name="remind_me_on_a_day">Remind me on a day</string>
    <string name="add_note">Add Note</string>
    <string name="saveReminders">Save</string>
    <string name="are_you_sure_you_want_to_discard_this_event">Are you sure you want to discard this event ?</string>
    <string name="discard">discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>

    <!-- current fragment type -->
    <string name="home">Calendear Life</string>
    <string name="detail">Detail</string>
    <string name="add_event_into_calendar">New Event</string>
    <string name="add_event_into_reminder">New Reminder</string>
    <string name="add_event_into_countdown">New Countdown</string>
    <string name="calendarFragment">Calendar</string>
    <string name="history">History</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>

    <!-- notification -->
    <string name="create_channel">Create Channel</string>

    <string name="update_message">Event has already been updated!</string>
    <string name="delete_message">Event has already been deleted!</string>
    <string name="save_message">Event has already been saved!</string>

    <string name="no_countdown">Click me to add some new countdowns</string>
    <string name="no_reminder">Click me to add some new reminders</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="target_date">Target Date</string>
    <string name="remind_date">Remind Date</string>
    <string name="location">Location</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="all_day">All-day</string>
    <string name="_2019_09_06_friday">2019/09/06 Friday</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="add_location">Add Location</string>
    <string name="set_as_reminder_event">Set as Reminder event</string>
    <string name="add_in_google_calendar">Add in Google calendar</string>
    <string name="set_as_countdown_event">Set as Countdown event</string>
    <string name="date">date</string>
    <string name="repeat">Repeat</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="title">Title</string>
    <string name="note_">Note</string>
    <string name="target_date_">Target Date</string>
    <string name="remind_date_">Remind Date</string>
    <string name="home_">Home</string>
    <string name="month_">Month</string>
    <string name="sync_your_calendar_">Sync your Calendar</string>
    <string name="reminder_record">Reminder record</string>
    <string name="countdown_record">Countdown record</string>
    <string name="add_event_">Add Event</string>
    <string name="add_calendar">Add Calendar</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_countdown">Add Countdown</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="chinese_mode">Language</string>
    <string name="new_reminder">Reminder</string>
    <string name="new_countdown">Countdown</string>
    <string name="new_event">Event</string>
    <string name="language">Language</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="days">↓</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="date_b">Date</string>
    <string name="until">Until......</string>
    <string name="target_date__">Target Date：</string>
    <string name="open_permission">Please open the permission of Calendar in settings</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_message">You need to have Mobile Data or wifi to access this. Press ok to Exit</string>
    <string name="logout">Logout</string>
</resources>
