<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/custom_month_layout">

        <ImageView
                android:id="@+id/previous_month"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_left"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <ImageView
                android:text="td"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/goToToday" app:layout_constraintEnd_toStartOf="@+id/last_month"
                android:layout_marginEnd="8dp" android:background="@drawable/icon_today"
                app:layout_constraintTop_toTopOf="@+id/currentMonth"
                app:layout_constraintBottom_toBottomOf="@+id/currentMonth"/>
        <ImageView
                android:id="@+id/last_month"
                android:layout_width="30dp"
                android:layout_height="30dp" app:srcCompat="@drawable/icon_right"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/currentMonth"
                android:text="September 2019"
                android:fontFamily="@font/noto_sans"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/previous_month"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/goToToday"/>

        <LinearLayout
                android:id="@+id/calendarHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/currentMonth" android:layout_marginTop="8dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/sunday"/>

            <TextView
                    style="@style/HorizontalBreakLine"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/monday"
            />


            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/tuesday"
            />

            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/wednesday"
            />

            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/thursday"
            />

            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/friday"
            />

            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/saturday"
            />
        </LinearLayout>

        <GridView
                android:id="@+id/gridView"
                android:layout_width="wrap_content"
                android:layout_height="658dp"
                android:numColumns="7"
                app:layout_constraintTop_toBottomOf="@+id/calendarHeader"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">


        </GridView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>