<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:background="?attr/totalWhite2Black"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/makesureLayout"
                android:background="?attr/totalWhite2Black"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0">

            <ImageView
                    android:id="@+id/removeIcon2"
                    android:layout_width="16dp"
                    android:layout_height="16dp" app:srcCompat="@drawable/icon_remove"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/makesureText"
                    android:text="@string/are_you_sure_you_want_to_discard_this_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans"
                    android:textStyle="bold"
                    android:textColor="?attr/totalB2W"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?attr/totalWhite2Black"
                    app:layout_constraintTop_toBottomOf="@+id/makesureText"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/discardLayout" app:layout_constraintStart_toStartOf="parent"
            >

                <TextView
                        android:text="@string/discard"
                        android:fontFamily="@font/noto_sans"
                        android:layout_width="wrap_content"
                        android:textColor="?attr/totalB2W"
                        android:layout_height="wrap_content" android:id="@+id/discardText"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?attr/totalWhite2Black"
                    app:layout_constraintTop_toBottomOf="@+id/discardLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/keepEditingLayout">

                <TextView
                        android:text="@string/keep_editing"
                        android:fontFamily="@font/noto_sans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/totalB2W"
                        android:id="@+id/keepEditingText" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>