<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <View
                android:id="@+id/view_spacing_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp" app:srcCompat="@drawable/icon_add" android:id="@+id/addIcon"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view_spacing_line" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/view_spacing_line2"/>
        <EditText
                android:id="@+id/remindersTitleInput"
                android:hint="@string/enter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@+id/addIcon"
                app:layout_constraintBottom_toBottomOf="@+id/addIcon" app:layout_constraintStart_toEndOf="@+id/addIcon"
                android:layout_marginStart="16dp"/>
        <ImageView
                android:id="@+id/removeIcon"
                android:layout_width="16dp"
                android:layout_height="16dp" app:srcCompat="@drawable/icon_remove"
                app:layout_constraintEnd_toEndOf="@+id/view_spacing_line"
                android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/view_spacing_line"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/view_spacing_line2"/>

        <View
                android:id="@+id/view_spacing_line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/remindersTitleInput"/>
        <ImageView
                android:id="@+id/bellIcon"
                android:layout_width="24dp"
                android:layout_height="24dp" app:srcCompat="@drawable/icon_bell"
                app:layout_constraintStart_toStartOf="@+id/remindersTitleInput" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view_spacing_line2"/>
        <TextView
                android:id="@+id/remindersDateInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_me_on_a_day"
                android:fontFamily="@font/noto_sans"
                android:textColor="#868686"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@+id/bellIcon"
                app:layout_constraintBottom_toBottomOf="@+id/bellIcon"
                app:layout_constraintStart_toEndOf="@+id/bellIcon" android:layout_marginStart="16dp"/>

        <View
                android:id="@+id/view_spacing_line3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/remindersDateInput"/>
        <ImageView
                android:id="@+id/noteIcon"
                android:layout_width="24dp"
                android:layout_height="24dp" app:srcCompat="@drawable/icon_note"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view_spacing_line3"
                app:layout_constraintStart_toStartOf="@+id/bellIcon"/>
        <EditText
                android:id="@+id/remindersNoteInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/add_note"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/noteIcon" android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/noteIcon"
                app:layout_constraintBottom_toBottomOf="@+id/noteIcon"/>

        <View
                android:id="@+id/view_spacing_line4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/remindersNoteInput"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp" app:srcCompat="@android:color/background_dark"
                android:id="@+id/saveImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remindersNoteInput"/>
        <TextView
                android:id="@+id/saveText"
                android:text="@string/saveReminders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@+id/saveImage"
                app:layout_constraintEnd_toEndOf="@+id/saveImage" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/saveImage"
                app:layout_constraintBottom_toBottomOf="@+id/saveImage"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>