<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/background_stone2"
            android:backgroundTintMode="src_atop"
            android:backgroundTint="?attr/stoneTint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="?attr/totalWhite2Black"
            app:cardCornerRadius="@dimen/card_raduis"
            app:cardElevation="@dimen/card_elevation"
            android:elevation="@dimen/card_elevation"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/countdownTitleInput"
                android:hint="@string/enter_title"
                android:textColorHint="?attr/textcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:textSize="@dimen/enter_title_size"
                android:textColor="?attr/totalB2W"
                android:background="@null"
                app:layout_constraintTop_toBottomOf="@+id/removeIcon" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
                android:id="@+id/removeIcon"
                android:tint="?attr/drawableTint"
                android:layout_width="16dp"
                android:layout_height="16dp" app:srcCompat="@drawable/icon_remove"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>

        <View
                android:id="@+id/view_spacing_line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?attr/linecolor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/countdownTitleInput"/>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_spacing_line2" android:id="@+id/editCountdownLayout">

            <ImageView
                    android:id="@+id/dateIcon"
                    android:tint="?attr/drawableTint"
                    android:layout_width="24dp"
                    android:layout_height="24dp" app:srcCompat="@drawable/icon_schedule"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:text="@string/date"
                    android:textColor="?attr/totalB2W"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/countdownDate"
                    android:textSize="@dimen/normal_text_size"
                    app:layout_constraintTop_toTopOf="@+id/dateIcon"
                    app:layout_constraintBottom_toBottomOf="@+id/dateIcon"
                    app:layout_constraintStart_toEndOf="@+id/dateIcon" android:layout_marginStart="16dp"/>
            <TextView
                    android:id="@+id/countdownDateInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans"
                    android:textSize="@dimen/normal_text_size"
                    android:text=""
                    android:textColor="?attr/textcolor"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@+id/countdownDate"
                    app:layout_constraintBottom_toBottomOf="@+id/countdownDate"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:id="@+id/view_spacing_line4"
                android:layout_width="411dp"
                android:layout_height="1dp"
                android:background="?attr/linecolor"
                app:layout_constraintTop_toBottomOf="@+id/editCountdownLayout" android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
                android:id="@+id/noteIcon"
                android:tint="?attr/drawableTint"
                android:layout_width="24dp"
                android:layout_height="24dp" app:srcCompat="@drawable/icon_note"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editCountdownLayout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
        <EditText
                android:hint="@string/add_note"
                android:textColorHint="?attr/textcolor"
                android:background="@null"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/noteInput"
                android:textColor="?attr/totalB2W"
                android:gravity="top"
                android:ellipsize="end"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintTop_toTopOf="@+id/noteIcon"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/noteIcon"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/saveText"/>
        <Button
                android:id="@+id/saveText"
                android:text="@string/saveReminders"
                android:background="@drawable/save_button_corner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editCountdownLayout"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>